<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Math Challenge For Kids</string>
    <string name="action_settings">Settings</string>

    <string name="activity_scoreboard">Scoreboard</string>
    <string name="activity_game">Game Time</string>
    <string name="activity_main">Main Menu</string>
    <string name="activity_instruction">Instruction</string>

    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
    <string name="correct">Correct</string>
    <string name="total">Total</string>

    <string name="easy">Easy!</string>
    <string name="intermediate">Intermediate!</string>
    <string name="hard">Hard!</string>

    <string name="easy_level">Easy Level</string>
    <string name="intermediate_level">Intermediate Level</string>
    <string name="hard_level">Hard Level</string>

    <string name="textViewIntro">Math Challenge</string>
    <string name="instruction">Instruction</string>
    <string name="guide">Instruction: Choose the level of challenge you wish to participate. There will be 10 questions to be answered.  You will be scored based on the number of correct answers and time taken to complete the challenge.</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="your_score">Your Score: </string>
    <string name="time_used">Time Used: </string>
    <string name="submit_score">Submit Score</string>

    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>
    <string name="subtracts">Subtract</string>
    <string name="incorrect">Incorrect</string>
    <string name="should_be">=</string>
    <string name="back_to_home">Back to Home</string>

</resources>
