<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#D1E231">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textViewName"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textViewScore"
        android:text="@string/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewTime"
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textViewEasyLevel"
            android:text="@string/easy_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listViewEasyLevelScoreboard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:footerDividersEnabled="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textViewIntermediateLevel"
            android:text="@string/intermediate_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listViewIntermediateLevelScoreboard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textViewHardLevelScoreboard"
            android:text="@string/hard_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listViewHardLevelScoreboard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home"
        android:onClick="onClickButtonMain"
        android:id="@+id/button" />

</LinearLayout>