<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="1"
    tools:context=".ScoreboardActivity" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/name"
            android:text="@string/name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/score"
            android:text="@string/score"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/time"
            android:text="@string/time"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1" />

    </TableRow>

</TableLayout>